# miden-zk-primitives

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/miden-zk-primitives/: Cargo.toml
crates/miden-zk-primitives/src/: accumulator.rs  bulletproof.rs  commitment.rs  elgamal.rs  error.rs  groth16.rs  lib.rs  merkle.rs  nullifier.rs  poly_commit.rs  poseidon.rs  range_proof.rs  recursive.rs  schnorr.rs  set_membership.rs  sigma.rs  sparse_merkle.rs  utils.rs  vector_commitment.rs  zkp.rs
examples/accumulator/: Cargo.toml
examples/accumulator/src/: main.rs
examples/age-verification/: Cargo.toml
examples/age-verification/src/: main.rs
examples/private-voting/: Cargo.toml
examples/private-voting/src/: main.rs
examples/schnorr-sig/: Cargo.toml
examples/schnorr-sig/src/: main.rs
examples/zk-credential/: Cargo.toml
examples/zk-credential/src/: main.rs
