[workspace]
resolver = "2"
members = [
    "crates/miden-zk-primitives",
    "examples/private-voting",
    "examples/age-verification",
    "examples/zk-credential",
    "examples/schnorr-sig",
    "examples/accumulator",
]

[workspace.package]
version    = "0.2.0"
edition    = "2021"
license    = "MIT"
repository = "https://github.com/amathxbt/miden-zk-primitives"
authors    = ["amathxbt"]

[workspace.dependencies]
miden-vm = { version = "0.11", features = ["std"] }

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
