[workspace]
resolver = "2"
members = [
    "crates/miden-zk-primitives",
    "examples/private-voting",
    "examples/age-verification",
    "examples/zk-credential",
    "examples/schnorr-sig",
    "examples/accumulator",
]

[workspace.package]
version    = "0.2.0"
edition    = "2021"
license    = "MIT"
repository = "https://github.com/amathxbt/miden-zk-primitives"
authors    = ["amathxbt"]

# Pin the exact release so that CI always resolves the same crate and the
# public API never shifts underneath us between patch bumps.
[workspace.dependencies]
miden-vm = { version = "=0.11.0", features = ["std"] }

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3

# A dedicated dev profile for CI: faster incremental compiles,
# enough optimisation to keep proof generation sane.
[profile.ci]
inherits  = "dev"
opt-level = 1
