[package]
name = "miden-zk-primitives"
description = "Zero-knowledge cryptographic primitives for Miden VM"
keywords = ["zero-knowledge", "miden", "zkp", "merkle", "commitment"]
categories = ["cryptography", "no-std"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["rand?/std", "rand?/std_rng"]

[dependencies]
rand = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }
