[package]
name        = "miden-zk-primitives"
description = "Production-ready ZK primitives built on the real Miden VM (STARK proofs)"
keywords    = ["zero-knowledge", "miden", "stark", "zkp", "cryptography"]
categories  = ["cryptography"]
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true

[dependencies]
miden-vm = { workspace = true }

[dev-dependencies]
miden-vm = { workspace = true }
