[package]
name = "private-voting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
[[bin]]
name = "private-voting"
path = "src/main.rs"
[dependencies]
miden-zk-primitives = { path = "../../crates/miden-zk-primitives" }
miden-vm = { workspace = true }
