[package]
name = "zk-credential"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
[[bin]]
name = "zk-credential"
path = "src/main.rs"
[dependencies]
miden-zk-primitives = { path = "../../crates/miden-zk-primitives" }
miden-vm = { workspace = true }
